# goose-rss

./: README.md  justfile  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.css  App.tsx  index.tsx
src-tauri/: .env  .gitignore  Cargo.toml  build.rs  diesel.toml  tauri.conf.json
src-tauri/migrations/2025-03-10-083621_create_feeds/: down.sql  up.sql
src-tauri/src/: error.rs  lib.rs  main.rs  schema.rs
src-tauri/src/commands/: feeds.rs
src-tauri/src/models/: database.rs  feeds.rs  fetch.rs
src-tauri/src/models_old/: database.rs  feeds.rs
src/api/: api.ts  feeds.ts  index.ts
src/components/: ExternalLink.tsx
src/components/ComputedTextInput/: ComputedTextInput.module.css  ComputedTextInput.tsx
src/components/CreateFeed/: CreateFeed.module.css  CreateFeed.tsx
src/components/FeedPreview/: FeedPreview.css  FeedPreview.tsx
src/components/ManageFeeds/: ManageFeeds.tsx
src/components/Navigation/: Navigation.css  Navigation.tsx
src/components/SingleFeed/: SingleFeed.tsx
src/util/: index.ts
