[package]
name = "goose-rss"
version = "0.1.0"
description = "A Tauri App"
license = "GPL-3.0"
authors = ["Benjamin R. Bray <benrbray@gmail.com>"]
repository = "https://github.com/benrbray/goose-rss"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "goose_rss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4.40", default-features = false, features = ["clock", "serde"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = "2.2.0"
diligent-date-parser = "0.1.5"
dotenvy = "0.15"
enum_stringify = "0.6.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
rusqlite = { version = "0.28", features = ["bundled"] }
sea-query = "0"
sea-query-rusqlite = { version = "0", features = ["with-chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc.21", features = ["chrono"] }
specta-typescript = "0.0.9"
syndication = "0.5.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
thiserror = "2.0.12"

